# opal

./: .cvsignore  .gitignore  Makefile  Makefile.in  config.sub  configure  configure.ac  configure.in  opal.dsw  opal.dxx  opal.dxy  opal.m4  opal.pc.in  opal.sln  opal.spec.in  opal_2005.sln  opal_2008.sln  opal_2010.sln  opal_2012.sln  opal_2013.sln  opal_2015.sln  opal_cfg.dxy  opal_cfg.dxy.in  opal_debug.pc.in  opal_defs.mak.in  opal_inc.mak  opal_inc.mak.in  opal_samples.sln  opal_samples_2005.sln  opal_samples_2008.sln  opal_samples_2010.sln  opal_samples_2012.sln  opal_samples_2013.sln  opalce.vcp  opalce.vcw  revision.h  revision.h.in  version.h
plugins/: .cvsignore  Install.vdproj  Installer_2003.vdproj  Installer_2005.vdproj  Makefile  Makefile.in  aclocal.m4  configure  configure.ac  plugin-config.h.in  plugin-inc.mak.in  plugin_config.h.in  plugin_config.mak.in  plugin_inc.mak  plugins.sln  plugins_2003.sln  plugins_2005.sln  plugins_2008.sln  plugins_2010.sln  plugins_2012.sln  plugins_2013.sln
plugins/LID/CAPI/: CAPI.cxx  CAPI_2003.vcproj  CAPI_2005.vcproj  Makefile.in
plugins/LID/CM_HID/: USB_2005.vcproj  cm_hid_2003.vcproj  cm_hid_2005.vcproj  cm_hid_2008.vcproj  cm_hid_2010.vcxproj  cm_hid_2012.vcxproj  cm_hid_2013.vcxproj  cm_hid_win.cpp
plugins/LID/IxJ/: IxJ_2003.vcproj  IxJ_2005.vcproj  Makefile.in  QTIoctl.h  ixjDefs.h  ixj_unix.cxx  ixj_win.cpp  ixjidb.h
plugins/LID/TigerJet/: TJ_2003.vcproj  TJ_2005.vcproj  TJ_2008.vcproj  TJ_2010.vcxproj  TJ_2010.vcxproj.filters  TJ_2012.vcxproj  TJ_2013.vcxproj  TJ_2013.vcxproj.filters  tj_win.cpp
plugins/LID/USB/: USB_2003.vcproj  USB_2005.vcproj  usb_win.cpp
plugins/LID/VPB/: Makefile.in  VPB_2005.vcproj  VPB_2008.vcproj  VPB_2010.vcxproj  VPB_2010.vcxproj.filters  vpb.cpp  vpbapi.h
plugins/LID/WinXP_HID/: winxp_hid.cpp  winxp_hid.h  winxp_hid_2003.vcproj  winxp_hid_2005.vcproj  winxp_hid_2008.vcproj  winxp_hid_2010.vcxproj  winxp_hid_2012.vcxproj  winxp_hid_2013.vcxproj  winxp_hid_lid_ptplugin.ini  winxp_train_2005.vcproj  winxp_train_2008.vcproj  winxp_train_2010.vcxproj  winxp_train_2012.vcxproj  winxp_train_2013.vcxproj  winxp_trainer.cpp
plugins/audio/EasyCodec/: .cvsignore  EasyG7231_2005.vcproj  EasyG7231_2008.vcproj  EasyG7231_2010.vcxproj  EasyG7231_2012.vcxproj  EasyG7231_2012.vcxproj.filters  EasyG7231_2013.vcxproj  EasyG7231_2013.vcxproj.filters  EasyG728_2005.vcproj  EasyG728_2008.vcproj  EasyG728_2010.vcxproj  EasyG728_2010.vcxproj.filters  EasyG728_2012.vcxproj  EasyG728_2013.vcxproj  EasyG728_2013.vcxproj.filters  EasyG729A_2005.vcproj  EasyG729A_2008.vcproj  EasyG729A_2010.vcxproj  EasyG729A_2010.vcxproj.filters  EasyG729A_2012.vcxproj  EasyG729A_2013.vcxproj  EasyG729A_2013.vcxproj.filters  easycodecs.cxx  easycodecs.h  g722codec.h  g7231codec.h  g728codec.h  g729Acodec.h
plugins/audio/G.722.1/: G.722.1_2005.vcproj  G.722.1_2008.vcproj  G.722.1_2010.vcxproj  G.722.1_2010.vcxproj.filters  G.722.1_2012.vcxproj  G.722.1_2012.vcxproj.filters  G.722.1_2013.vcxproj  G.722.1_2013.vcxproj.filters  G7221Codec.c  Makefile  Makefile.in
plugins/audio/G.722.2/: G.722.2_2005.vcproj  G.722.2_2008.vcproj  G.722.2_2010.vcxproj  G.722.2_2010.vcxproj.filters  G.722.2_2012.vcxproj  G.722.2_2013.vcxproj  G.722.2_2013.vcxproj.filters  G7222Codec.cpp  Makefile  Makefile.in
plugins/audio/G722/: G722_2010.vcxproj  G722_2012.vcxproj  G722_2013.vcxproj  Makefile  Makefile.in  g722_2005.vcproj  g722_2008.vcproj  g722_2010.vcxproj.filters  g722_2013.vcxproj.filters  g722codec.c
plugins/audio/G7231ACM/: g7231acm.cxx  g7231acm.vcproj
plugins/audio/G726/: .cvsignore  G726.vcproj  G726_2005.vcproj  G726_2008.vcproj  G726_2010.vcxproj  G726_2012.vcxproj  G726_2012.vcxproj.filters  G726_2013.vcxproj  G726_2013.vcxproj.filters  Makefile  Makefile.in  g726codec.c
plugins/audio/GSM0610/: Makefile  Makefile.in  gsm0610_2005.vcproj  gsm0610_2008.vcproj  gsm0610_2010.vcxproj  gsm0610_2012.vcxproj  gsm0610_2012.vcxproj.filters  gsm0610_2013.vcxproj  gsm0610_2013.vcxproj.filters  gsm06_10_codec.c
plugins/audio/IMA_ADPCM/: IMA_ADPCM.vcproj  IMA_ADPCM_2005.vcproj  IMA_ADPCM_2008.vcproj  IMA_ADPCM_2010.vcxproj  IMA_ADPCM_2010.vcxproj.filters  IMA_ADPCM_2012.vcxproj  IMA_ADPCM_2013.vcxproj  IMA_ADPCM_2013.vcxproj.filters  Makefile  Makefile.in  ima_adpcm.c
plugins/audio/LPC_10/: LPC_10.vcproj  LPC_10_2005.vcproj  LPC_10_2008.vcproj  LPC_10_2010.vcxproj  LPC_10_2010.vcxproj.filters  LPC_10_2012.vcxproj  LPC_10_2013.vcxproj  LPC_10_2013.vcxproj.filters  Makefile  Makefile.in  lpc_10_codec.c
plugins/audio/Opus/: Makefile  Makefile.in  OpusCodec.cpp  OpusCodec_2010.vcxproj  OpusCodec_2012.vcxproj  OpusCodec_2013.vcxproj  Opus_2010.vcxproj
plugins/audio/SBC/: Makefile  Makefile.in  sbc.c  sbc.h  sbc_math.h  sbc_tables.h  sbccodec.cxx
plugins/audio/SILK/: Makefile  Makefile.in  ReadMe.txt  SILKCodec.cpp  SILK_2005.vcproj  SILK_2008.vcproj  SILK_2010.vcxproj  SILK_2012.vcxproj  SILK_2013.vcxproj
plugins/audio/Speex/: Makefile  Makefile.in  Speex_2005.vcproj  Speex_2008.vcproj  Speex_2010.vcxproj  Speex_2012.vcxproj  Speex_2013.vcxproj  Speex_2013.vcxproj.filters  speexcodec.cxx
plugins/audio/VoiceAgeG729/: .cvsignore  README.txt  VoiceAgeG729.vcproj  VoiceAgeG729_2005.vcproj  VoiceAgeG729_2008.vcproj  VoiceAgeG729_2010.vcxproj  VoiceAgeG729_2010.vcxproj.filters  VoiceAgeG729_2012.vcxproj  VoiceAgeG729_2013.vcxproj  VoiceAgeG729_2013.vcxproj.filters  g729codec.c
plugins/audio/celt/: Makefile  Makefile.in  celtcodec.c
plugins/audio/gsm-amr/: Makefile  Makefile.in  amrcodec.c  gsmamr.vcproj  gsmamr_2005.vcproj  gsmamr_2008.vcproj  gsmamr_2010.vcxproj  gsmamr_2012.vcxproj  gsmamr_2012.vcxproj.filters  gsmamr_2013.vcxproj  gsmamr_2013.vcxproj.filters
plugins/audio/iLBC/: Makefile  Makefile.in  ilbccodec.c  ilbccodec_2005.vcproj  ilbccodec_2008.vcproj  ilbccodec_2010.vcxproj  ilbccodec_2010.vcxproj.filters  ilbccodec_2012.vcxproj  ilbccodec_2013.vcxproj  (+1 more)
plugins/template/: Makefile.in  template.cpp  template_2005.vcproj  template_2008.vcproj  template_h264.cpp  template_h264_2005.vcproj  template_h264_2008.vcproj
(+1757 files in other folders)
